ADD_DEFINITIONS(-D__GAME_SERVER__)
SET(LIBITEMS_SRC 	
	ItemIDRegistry.cpp
	AR.cpp
	Belt.cpp
	Blade.cpp
	Bomb.cpp
	BombMaterial.cpp
	Bracelet.cpp
	Coat.cpp
	Cross.cpp
	Mace.cpp
	ETC.cpp
	Glove.cpp
	Sword.cpp
	Helm.cpp
	HolyWater.cpp
	Key.cpp
	LearningItem.cpp
	Magazine.cpp
	Mine.cpp
	Money.cpp
	Motorcycle.cpp
	Necklace.cpp
	Potion.cpp
	Ring.cpp
	SG.cpp
	SMG.cpp
	Shield.cpp
	Shoes.cpp
	SR.cpp
	Trouser.cpp
	VampireBracelet.cpp
	VampireRing.cpp
	VampireNecklace.cpp
	VampireCoat.cpp
	Water.cpp
	Skull.cpp
	Serum.cpp
	VampireETC.cpp
	SlayerPortalItem.cpp
	VampirePortalItem.cpp
	EventGiftBox.cpp
	EventStar.cpp
	VampireEarring.cpp
	Relic.cpp
	VampireWeapon.cpp
	VampireAmulet.cpp
	QuestItem.cpp
	Gun.cpp
	EventTree.cpp
	EventETC.cpp
	BloodBible.cpp
	CastleSymbol.cpp
	CoupleRing.cpp
	VampireCoupleRing.cpp
	CoupleRingBase.cpp
	EventItem.cpp
	DyePotion.cpp
	ResurrectItem.cpp
	MixingItem.cpp
	OustersArmsband.cpp
	OustersBoots.cpp
	OustersChakram.cpp
	OustersCirclet.cpp
	OustersCoat.cpp
	OustersPendent.cpp
	OustersRing.cpp
	OustersStone.cpp
	OustersWristlet.cpp
	Larva.cpp
	Pupa.cpp
	ComposMei.cpp
	OustersSummonItem.cpp
	EffectItem.cpp
	CodeSheet.cpp
	MoonCard.cpp
	Sweeper.cpp
	PetItem.cpp
	PetFood.cpp
	PetEnchantItem.cpp
	LuckyBag.cpp
	SMSItem.cpp
	CoreZap.cpp
	TrapItem.cpp
	WarItem.cpp
	CarryingReceiver.cpp
	ShoulderArmor.cpp
	Dermis.cpp
	Persona.cpp
	Fascia.cpp
	Mitten.cpp
	SubInventory.cpp)
ADD_LIBRARY(Items STATIC ${LIBITEMS_SRC})