ADD_DEFINITIONS(-D__LINUX__ -D__GAME_SERVER__)
INCLUDE_DIRECTORIES(. ./LuaScript)
SET(QUEST_OBJS Trigger.cpp TriggerManager.cpp PropertyBuffer.cpp VariableBuffer.cpp VariableInfo.cpp TriggerParser.cpp)
SET(CONDITION_OBJS
	ConditionFactoryManager.cpp
	ConditionEveryTime.cpp
	ConditionAnsweredBy.cpp
	ConditionFlagOn.cpp
	ConditionFlagOff.cpp
	ConditionAttrComp.cpp
	ConditionRaceComp.cpp
	ConditionSameClan.cpp
	ConditionPayPlay.cpp
	ConditionEnterMasterLair.cpp
	ConditionEnterCastle.cpp
	ConditionEnterHolyLand.cpp
	ConditionEnterCastleDungeon.cpp
	ConditionHasQuest.cpp
	ConditionHasInvenSpace.cpp
	ConditionCanEnterPayZone.cpp
	ConditionCanEnterBeginnerZone.cpp
	ConditionCanWarpGate.cpp
	ConditionCanEnterLevelWarZone.cpp
	ConditionCanPetQuest.cpp
	ConditionCanEnterEventZone.cpp
	ConditionEffectFlag.cpp
	ConditionCanEnterGDRLair.cpp
	ConditionExistReinforce.cpp
	ConditionSiegeDefenderSide.cpp
	ConditionSiegeAttackerSide.cpp
	ConditionNotGuildMember.cpp
	ConditionIsGuildMember.cpp
	ConditionCanEnterQuestZone.cpp
	ConditionHasEnoughFamilyCoin.cpp)
SET(ACTION_OBJS
	ActionFactoryManager.cpp
	ActionSetPosition.cpp
	ActionWander.cpp
	ActionSay.cpp
	ActionRandomSay.cpp
	ActionAsk.cpp
	ActionQuitDialogue.cpp
	ActionPrepareShop.cpp
	ActionSell.cpp
	ActionBuy.cpp
	ActionRegenShop.cpp
	ActionTeachSkill.cpp
	ActionHeal.cpp
	ActionRedeemMotorcycle.cpp
	ActionSearchMotorcycle.cpp
	ActionRepair.cpp
	ActionStashSell.cpp
	ActionStashOpen.cpp
	ActionRestore.cpp
	ActionSetResurrectZone.cpp
	ActionSilverCoating.cpp
	ActionCreateGuild.cpp
	ActionDestroyGuild.cpp
	ActionTutorial.cpp
	ActionGiveNewbieItem.cpp
	ActionActivatePortal.cpp
	ActionTurnOnFlag.cpp
	ActionTurnOffFlag.cpp
	ActionSystemMessage.cpp
	ActionTakeDonation.cpp
	ActionCallHelicopter.cpp
	ActionRegenEventShop.cpp
	ActionAskDynamic.cpp
	ActionSayDynamic.cpp
	ActionGiveSpecialEventItem.cpp
	ActionRedistributeAttr.cpp
	ActionTradeEventItem.cpp
	ActionTradeLairItem.cpp
	ActionShowGuildDialog.cpp
	ActionSimpleQuestList.cpp
	ActionSimpleQuestComplete.cpp
	ActionSimpleQuestRegen.cpp
	ActionTradeGiftBox.cpp
	ActionGiveTestServerReward.cpp
	ActionEnterCastleWithFee.cpp
	ActionShowTaxBalance.cpp
	ActionAskVariable.cpp
	ActionWarRegistration.cpp
	ActionShowWarSchedule.cpp
	ActionJoinRaceWar.cpp
	ActionGiveEventItem.cpp
	ActionGiveAccountEventItem.cpp
	ActionInitPartnerWaitingManager.cpp
	ActionWaitForMeetCouple.cpp
	ActionWaitForApartCouple.cpp
	ActionAcceptCoupleRequest.cpp
	ActionAcceptApartCouple.cpp
	ActionForceApartCouple.cpp
	ActionEnterPKZone.cpp
	ActionWarpToResurrectPosition.cpp
	ActionSelectQuest.cpp
	ActionQuestReward.cpp
	ActionWarpToNoviceZone.cpp
	ActionCancelQuest.cpp
	ActionInitSimpleQuest.cpp
	ActionWanderZone.cpp
	ActionInitEventQuest.cpp
	ActionAskByQuestLevel.cpp
	ActionGiveEventQuest.cpp
	ActionAdvanceEventQuest.cpp
	ActionCancelEventQuestScript.cpp
	ActionRewardEventQuest.cpp
	ActionGiveLotto.cpp
	ActionGiveEventQuestScript.cpp
	ActionStartEventQuest.cpp
	ActionWarpInZone.cpp
	ActionEventMeet.cpp
	ActionGiveFinalLottoScript.cpp
	ActionGiveQuestItem.cpp
	ActionTakeOutGoods.cpp
	ActionClearRankBonus.cpp
	ActionContractGnomesHorn.cpp
	ActionDownSkill.cpp
	ActionMiniGame.cpp
	ActionGiveItem.cpp
	ActionActivateMazeExit.cpp
	ActionActivateMazeEnter.cpp
	ActionActivateMazeReturn.cpp
	ActionSystemMessagePerRace.cpp
	ActionWarpLevelWarZone.cpp
	ActionCheckPartnerName.cpp
	ActionStartPetQuest.cpp
	ActionPetWithdraw.cpp
	ActionPetDeposit.cpp
	ActionEnterEventZone.cpp
	ActionEnterGDRLair.cpp
	ActionTradeGQuestEventItem.cpp
	ActionRegisterSiege.cpp
	ActionRegisterReinforce.cpp
	ActionAcceptReinforce.cpp
	ActionDenyReinforce.cpp
	ActionEnterSiege.cpp
	ActionRecallSiege.cpp
	ActionSelectBloodBible.cpp
	ActionClearBloodBible.cpp
	ActionModifyTaxRatio.cpp
	ActionSwapAdvancementItem.cpp
	ActionShowDonationDialog.cpp
	ActionEnterQuestZone.cpp
	ActionShowConfirmGetEventItemDialog.cpp
	ActionGiveCommonEventItem.cpp)
SET(LIBQUEST_SRCS ${QUEST_OBJS} ${CONDITION_OBJS} ${ACTION_OBJS})
ADD_LIBRARY(Quest STATIC ${LIBQUEST_SRCS})

ADD_SUBDIRECTORY(luaScript)