INCLUDE_DIRECTORIES(..)
ADD_DEFINITIONS(-D__GAME_SERVER__)
SET(LIBSKILL_SRC 
ARAttack.cpp                     EffectSwordOfThor.cpp
Aberration.cpp                   EffectTendril.cpp
AbsorbSoul.cpp                   EffectTileStorm.cpp
AcidBall.cpp                     EffectTransformToBat.cpp
AcidBolt.cpp                     EffectTransformToWerwolf.cpp
AcidEruption.cpp                 EffectTransformToWolf.cpp
AcidStorm.cpp                    EffectTrapInstalled.cpp
AcidStrike.cpp                   EffectTrapTriggered.cpp
AcidSwamp.cpp                    EffectTyphoon.cpp
AcidTouch.cpp                    EffectVampirePortal.cpp
Activation.cpp                   EffectVigorDrop.cpp
AirShield.cpp                    EffectVigorDropToCreature.cpp
Armageddon.cpp                   EffectWaterBarrier.cpp
AttackArms.cpp                   EffectWhitsuntide.cpp
AttackMelee.cpp                  EffectWillOfLife.cpp
AuraBall.cpp                     EffectYellowPoison.cpp
AuraRing.cpp                     EffectYellowPoisonToCreature.cpp
AuraShield.cpp                   EmissionWater.cpp
BackStab.cpp                     EnergyDrop.cpp
BeatHead.cpp                     Eternity.cpp
Berserker.cpp                    Evade.cpp
BikeCrash.cpp                    Expansion.cpp
BiteOfDeath.cpp                  ExplosionWater.cpp
BlazeBolt.cpp                    Extreme.cpp
BlazeWalk.cpp                    FatalSnick.cpp
Bless.cpp                        FeldwebelFire.cpp
BlitzSliding.cpp                 FierceFlame.cpp
BloodDrain.cpp                   FirePiercing.cpp
BloodyBall.cpp                   Flare.cpp
BloodyBreaker.cpp                FlashSliding.cpp
BloodyKnife.cpp                  Flourish.cpp
BloodyMarker.cpp                 FrozenArmor.cpp
BloodyMasterWave.cpp             FuryOfGnome.cpp
BloodyNail.cpp                   GammaChop.cpp
BloodySnake.cpp                  GhostBlade.cpp
BloodySpear.cpp                  Glacier1.cpp
BloodyStorm.cpp                  Glacier2.cpp
BloodyStrike.cpp                 GnomesWhisper.cpp
BloodyTunnel.cpp                 GoreGlandFire.cpp
BloodyWall.cpp                   GrayDarkness.cpp
BloodyWarp.cpp                   GreatHeal.cpp
BloodyWave.cpp                   GreenPoison.cpp
BloodyZenith.cpp                 GreenStalker.cpp
Blunting.cpp                     GrenadeAttack.cpp
BombingStar.cpp                  GroundAttack.cpp
BulletOfLight.cpp                GroundBless.cpp
BurningSolCharging.cpp           GunShotGuidance.cpp
BurningSolLaunch.cpp             Hallucination.cpp
Cannonade.cpp                    Halo.cpp
CastleSkillSlot.cpp              HandsOfFire.cpp
CauseCriticalWounds.cpp          HandsOfNizie.cpp
CauseLightWounds.cpp             HandsOfWisdom.cpp
CauseSeriousWounds.cpp           HarpoonBomb.cpp
ChainThrowingAxe.cpp             HeadShot.cpp
ChargingAttack.cpp               HeartCatalyst.cpp
ChargingPower.cpp                HellFire.cpp
ChoppingFirewood.cpp             Hide.cpp
ClaymoreExplosion.cpp            HitConvert.cpp
Concealment.cpp                  HitRoll.cpp
ContinualLight.cpp               HolyArmor.cpp
CreateBomb.cpp                   HolyArrow.cpp
CreateHolyPotion.cpp             HolyBlast.cpp
CreateHolyWater.cpp              Howl.cpp
CreateMine.cpp                   HurricaneCombo.cpp
CriticalGround.cpp               Hymn.cpp
CrossCounter.cpp                 IceAuger.cpp
CrossGuard.cpp                   IceField.cpp
CureAll.cpp                      IceHail.cpp
CureCriticalWounds.cpp           IceHorizon.cpp
CureLightWounds.cpp              IceLance.cpp
CurePoison.cpp                   IceWave.cpp
CureSeriousWounds.cpp            Illendue.cpp
DancingSword.cpp                 IllusionOfAvenge.cpp
DarkBluePoison.cpp               InfinityThunderbolt.cpp
Darkness.cpp                     InstallMine.cpp
Death.cpp                        InstallTrap.cpp
DeleoEfficio.cpp                 InstallTurret.cpp
DenialMagic.cpp                  IntimateGrail.cpp
Destinies.cpp                    Invisibility.cpp
DestructionSpear.cpp             JabbingVein.cpp
DetectHidden.cpp                 KasasArrow.cpp
DetectInvisibility.cpp           LandMineExplosion.cpp
DisarmMine.cpp                   LarSlash.cpp
DistanceBlitz.cpp                Liberty.cpp
DivineGuidance.cpp               Light.cpp
DivineSpirits.cpp                LightBall.cpp
Doom.cpp                         Lightness.cpp
DoubleImpact.cpp                 LightningHand.cpp
DoubleShot.cpp                   MagicElusion.cpp
DragonTornado.cpp                MagnumSpear.cpp
DuckingWallop.cpp                MentalSword.cpp
DuplicateSelf.cpp                Mephisto.cpp
Earthquake.cpp                   MercyGround.cpp
EarthsTeeth.cpp                  MeteorStorm.cpp
EatCorpse.cpp                    MeteorStrike.cpp
EffectAberration.cpp             MindControl.cpp
EffectAcidEruption.cpp           MiracleShield.cpp
EffectAcidStorm.cpp              MoleShot.cpp
EffectAcidSwamp.cpp              MonsterRangeSkill.cpp
EffectActivation.cpp             MoonlightSever.cpp
EffectAirShield.cpp              MultiAmputate.cpp
EffectArmageddon.cpp             MultiShot.cpp
EffectAuraShield.cpp             MultiThrowingAxe.cpp
EffectBerserker.cpp              NooseOfWraith.cpp
EffectBlazeWalk.cpp              NymphRecovery.cpp
EffectBless.cpp                  ObservingEye.cpp
EffectBlindness.cpp
EffectBlockHead.cpp              OpenCasket.cpp
EffectBloodDrain.cpp             OustersSkillSlot.cpp
EffectBloodySnake.cpp            Paralyze.cpp
EffectBloodyStorm.cpp            PassingHeal.cpp
EffectBloodyWall.cpp             Peace.cpp
EffectBloodyWallBlocked.cpp      Piercing.cpp
EffectBlunting.cpp               PlasmaRocketLauncher.cpp
EffectBurningSolCharging.cpp     PlayingWithFire.cpp
EffectCannonade.cpp              PleasureExplosion.cpp
EffectCauseCriticalWounds.cpp    PoisonMesh.cpp
EffectChargingPower.cpp          PoisonStorm.cpp
EffectConcealment.cpp            PoisonStrike.cpp
EffectContinualBloodyWall.cpp    PoisonousHands.cpp
EffectCrossCounter.cpp           PotentialExplosion.cpp
EffectCrossGuard.cpp             PowerOfLand.cpp
EffectCureCriticalWounds.cpp     Prominence.cpp
EffectDancingSword.cpp           ProtectionFromAcid.cpp
EffectDarkBluePoison.cpp         ProtectionFromBlood.cpp
EffectDarkness.cpp               ProtectionFromCurse.cpp
EffectDeath.cpp                  ProtectionFromPoison.cpp
EffectDecreaseHP.cpp             Purify.cpp
EffectDenialMagic.cpp            QuickFire.cpp
EffectDestinies.cpp              RainbowSlasher.cpp
EffectDestructionSpear.cpp       RapidGliding.cpp
EffectDetectHidden.cpp           ReactiveArmor.cpp
EffectDetectInvisibility.cpp     Rebuke.cpp
EffectDetectMine.cpp             Rediance.cpp
EffectDivineGuidance.cpp         Reflection.cpp
EffectDivineSpirits.cpp          RefusalEther.cpp
EffectDoom.cpp                   Regeneration.cpp
EffectDragonTornado.cpp          RegenerationSkill.cpp
EffectEnergyDrop.cpp             RemoveCurse.cpp
EffectEnergyDropToCreature.cpp   ReputoFactum.cpp
EffectEternity.cpp               Requital.cpp
EffectEvade.cpp                  Restore.cpp
EffectExpansion.cpp
EffectExplosionWater.cpp         Resurrect.cpp
EffectExtreme.cpp                Revealer.cpp
EffectFadeOut.cpp                RingOfFlare.cpp
EffectFierceFlame.cpp            RottenApple.cpp
EffectFlare.cpp                  SMGAttack.cpp
EffectFrozenArmor.cpp            Sacrifice.cpp
EffectFuryOfGnome.cpp            Sanctuary.cpp
EffectFuryOfGnomeMark.cpp        Seduction.cpp
EffectGhostBlade.cpp             SelfDestruction.cpp
EffectGnomesWhisper.cpp          SetAfire.cpp
EffectGrayDarkness.cpp           ShadowDancing.cpp
EffectGreenPoison.cpp            ShadowOfStorm.cpp
EffectGreenStalker.cpp           ShadowWalk.cpp
EffectGroundAttack.cpp           SharpChakram.cpp
EffectGroundBless.cpp            SharpHail.cpp
EffectGroundElemental.cpp        SharpRound.cpp
EffectGunShotGuidanceAim.cpp     SharpShield.cpp
EffectGunShotGuidancePoint.cpp   ShiftBreak.cpp
EffectHallucination.cpp          SimpleCureSkill.cpp
EffectHalo.cpp                   SimpleLinearMeleeSkill.cpp
EffectHandsOfFire.cpp            SimpleMeleeSkill.cpp
EffectHarpoonBomb.cpp            SimpleMissileSkill.cpp
EffectHeartCatalyst.cpp          SimpleTileCureSkill.cpp
EffectHellFire.cpp               SimpleTileMeleeSkill.cpp
EffectHellFireToEnemy.cpp        SimpleTileMissileSkill.cpp
SingleBlow.cpp
EffectHolyArmor.cpp              SkillFormula.cpp
EffectHowl.cpp                   SkillHandler.cpp
EffectHymn.cpp                   SkillHandlerManager.cpp
EffectIceField.cpp               SkillSlot.cpp
EffectIceFieldToCreature.cpp     SkillUtil.cpp
EffectIceHail.cpp                SnakeCombo.cpp
EffectIceHailToTile.cpp          Sniping.cpp
EffectIceHorizon.cpp             SoulChain.cpp
EffectIceOfSoulStone.cpp         SoulRebirth.cpp
EffectInstallTurret.cpp          SpiralSlay.cpp
EffectIntimateGrail.cpp          SpiritGuard.cpp
EffectInvisibility.cpp           SpitStream.cpp
EffectJabbingVein.cpp            StoneAuger.cpp
EffectLight.cpp                  StoneSkin.cpp
EffectLightness.cpp              Striking.cpp
EffectMagicElusion.cpp           SummonCasket.cpp
EffectMagnumSpear.cpp            SummonFireElemental.cpp
EffectMephisto.cpp               SummonGoreGland.cpp
EffectMercyGround.cpp            SummonGroundElemental.cpp
EffectMeteorStrike.cpp           SummonMiga.cpp
EffectMindControl.cpp            SummonMigaAttack.cpp
EffectMiracleShield.cpp          SummonMonsters.cpp
EffectObservingEye.cpp
EffectParalyze.cpp               SummonWaterElemental.cpp
EffectPassingHeal.cpp            SweepVice.cpp
EffectPeace.cpp                  SwordOfThor.cpp
EffectPlasmaRocketLauncher.cpp   SwordRay.cpp
EffectPoison.cpp                 SwordWave.cpp
EffectPoisonMesh.cpp             TalonOfCrow.cpp
EffectPoisonStorm.cpp            Teleport.cpp
EffectPotentialExplosion.cpp     Tendril.cpp
EffectProminence.cpp             ThrowHolyWater.cpp
EffectProtectionFromAcid.cpp     ThrowingAxe.cpp
EffectProtectionFromBlood.cpp    ThunderBolt.cpp
EffectProtectionFromCurse.cpp    ThunderFlash.cpp
EffectProtectionFromPoison.cpp   ThunderSpark.cpp
EffectReactiveArmor.cpp          ThunderStorm.cpp
EffectRediance.cpp               TornadoSever.cpp
EffectReflection.cpp             TransformToBat.cpp
EffectRegeneration.cpp           TransformToWerwolf.cpp
EffectReloadTimer.cpp            TransformToWolf.cpp
EffectReputoFactum.cpp           Transfusion.cpp
EffectRequital.cpp               Trident.cpp
EffectRestore.cpp                TripleBreak.cpp
EffectRevealer.cpp               TripleShot.cpp
EffectRingOfFlare.cpp            TripleSlasher.cpp
EffectSacrifice.cpp              TurnUndead.cpp
EffectSanctuary.cpp              TurretFire.cpp
EffectSeduction.cpp              Typhoon.cpp
EffectSetAfire.cpp               UltimateBlow.cpp
EffectShadowOfStorm.cpp          Unburrow.cpp
EffectSharpChakram.cpp           Uninvisibility.cpp
EffectSharpHail.cpp              UnterfeldwebelFire.cpp
EffectSharpShield.cpp            Untransform.cpp
EffectSleep.cpp                  VampireSkillSlot.cpp
EffectSnipingMode.cpp
EffectSoulChain.cpp              VigorDrop.cpp
EffectSpiritGuard.cpp            ViolentPhantom.cpp
EffectStoneSkin.cpp              Visible.cpp
WaterBarrier.cpp
EffectStormAcid.cpp              Whitsuntide.cpp
EffectStormBloody.cpp            WideIceField.cpp
EffectStormPoison.cpp            WideIceHail.cpp
EffectStriking.cpp               WideLightning.cpp
WildSmash.cpp
EffectSummonCasket.cpp           WildTyphoon.cpp
EffectSummonFireElemental.cpp    WildWolf.cpp
EffectSummonGroundElemental.cpp  WillOfLife.cpp
EffectSummonSylph.cpp            WindDivider.cpp
EffectSummonWaterElemental.cpp   YellowPoison.cpp)

ADD_LIBRARY(Skill STATIC ${LIBSKILL_SRC})